src/test/ui/parser/issue-24197.stderr
error: expected one of `:`, `;`, `=`, or `@`, found `[`
  --> $DIR/issue-24197.rs:2:12
   |
LL |     let buf[0] = 0; //~ ERROR expected one of `:`, `;`, `=`, or `@`, found `[`
   |            ^ expected one of `:`, `;`, `=`, or `@` here

error: aborting due to previous error

