src/test/ui/parser/issue-24197.rs
fn main() {
    let buf[0] = 0; //~ ERROR expected one of `:`, `;`, `=`, `@`, or `|`, found `[`
}
